# D-Omat-Github-renew-loans-at-keskikirjastot--robot-framework

./: pyproject.toml
automation/: automate.robot
resources/locators/: front_page.yaml  login_page.yaml  my_research_page.yaml
resources/pages/: front_page.resource  login_page.resource  my_research_page.resource
resources/utils/: browser_management.resource
results/: log.html  output.xml  playwright-log.txt  report.html
