[tool.poetry]
name = "renew-loans-at-keskikirjastot-robot-framework"
version = "0.1.0"
description = ""
authors = ["Teemu Sipiläinen <tsipilainen@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
robotframework = "^7.1.1"
robotframework-browser = "19.0.1"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
